--- a/index.html
+++ b/index.html
@@ -987,7 +987,7 @@
 				<section> <!-- Slide 44 -->
 					<img class="myimage" width="90%" data-src="http://eo4geo.sbg.ac.at/UNIBAS/images/slide-52.png">
 					<span style="position:absolute; font-size:50%; margin-left:-10%; margin-top:18%; font-weight:bold;">
-						Total <br/> Chlorophill <br/>
+						Total <br/> Chlorophyll <br/>
 						Concentration <br/> (\(\mu g \, cm^{-2}\))  <br/>
 					</span>
 				</section>
