--- a/index.html
+++ b/index.html
@@ -1278,7 +1278,7 @@
 						<h2 style="color:#2D5595; font-weight:bold;">Natural sources of radiation <br/> actually available for EO</h2>
 						<img class="myimage" width="10%" data-src="http://eo4geo.sbg.ac.at/UNIBAS/images/theoretical_tools.png" style="float:right; margin-top:-12%; margin-right:12%;">
 						<br/><br/><br/>
-						<img class="myimage" width="80%" data-src="http://eo4geo.sbg.ac.at/UNIBAS/images/slide-80.PNG" style="float:center; margin-top:-10%;">
+						<img class="myimage" width="80%" data-src="http://eo4geo.sbg.ac.at/UNIBAS/images/slide-80.png" style="float:center; margin-top:-10%;">
 												
 						<table style="border:1px solid black; position:absolute; margin-left:18%; width:65%; font-size:18px;">
 						<tr>
