--- a/index.html
+++ b/index.html
@@ -1497,7 +1497,7 @@
 				
 					<section> <!-- Slide 86-->
 							<p style="font-weight:bold; width:100%; border:1px solid black; text-align:right;">
-								<u style="text-decoration:none !important;">Multitemporal approach (2016 Carmine Di Polito et al.) </u>
+								<u style="text-decoration:none !important;">Multitemporal approach (Di Polito et al., 2016) </u>
 							</p>
 							<img class="myimage" width="90%" data-src="http://eo4geo.sbg.ac.at/UNIBAS/images/slide-96a.PNG" />
 							<div class="myimage fragment">
