--- a/index.html
+++ b/index.html
@@ -72,9 +72,9 @@
 					dc:source "";
 					dc:rightsHolder "Valerio Tramutoli";
 					dc:license "";
-					dc:relation eo4geo:"";
-					dc:relation eo4geo:";
-					dc:relation eo4geo:"";.	
+					dc:relation eo4geo:;
+					dc:relation eo4geo:;
+					dc:relation eo4geo:;.	
 								-->
 
 				<!-- Update Brackets \left(\right) in all equations-->
