Update to RDFa conformity

--- a/index.html
+++ b/index.html
@@ -9,13 +9,36 @@
 		
 		
 <!doctype html>
-<html lang="en" >
+<html prefix="eo4geo: http://bok.eo4geo.eu/" prefix="dc: http://purl.org/dc/terms/" lang="en" >
 
 	<head>
 		<meta charset="utf-8">
 		 
-		<title>eo4geo template for Reveal JS</title>
-
+		<title> </title>
+		<span property="dc:title">Fundamentals of optical remote sensing</span>
+		<span property="dc:creator">Valerio Tramutoli, University of Basilicata</span>
+		<span property="dc:subject">Physical Priciples, Remote Sensing, EO4GEO, Satellite, Earth Observation</span>
+		<span property="dc:abstract">This is a module on Physical Principles which are the basis of any Remote Sensing application";</span>
+		<span property="dc:tableOfContents">(1) em radiation and radiometric measurements; (2) Blackbody Radiation; (3) Rayleigh-Jeans approssimation ; (4) Wien's Law; 
+													(5) Matter/Radiation interaction; (6) Kirchoff Law; (7) Matter/Radiation interaction in the visible range; (8) Spectral measurements, spectral signatures of soil, water, vegetation;
+													(9) Interpretation of vegetations spectral signatures; (10) NDVI index; (11) Atomic Spectroscopy; (12) Basic principles of multi-spectral remote sensing;
+													(13) From ground to space: sensor acquisition and digital image formation, EO sensors; (14) Natural sources of radiation for EO: the Sun and the Earth; (15) Passive and Active Earth Observing Techniques; (16) Interaction between radiation and atmosphere;
+													(17) Chemical-physical properties of atmosphere; (18) Scattering in the atmosphere; (19) Extinction of solar radiation in the atmosphere; (20) Atmospheric transmittance and atmospheric windows;
+													(21) Penetration of e.m. radiation into the matter; (22) A Remote Sensing application: sediments or shallow water?; 23() Cloud detection</span>
+		<span property="dc:desription">Understand Physical Principles which are the basis of Remote Sensing</span>
+		<span property="dc:contributor">Nicola Capece, Valeria Satriano</span>
+		<span property="dc:created">2020-08-27</span>
+		<span property="dc:type">InteractiveResource</span>
+		<span property="dc:format">html</span>
+		<span property="dc:language">EN</span>
+		<span property="dc:SizeOrDuration">270min + tutorials</span>
+		<span property="dc:audience">from VET up to doctoral students</span>
+		<span property="dc:educationLevel">EQF 5 to 8</span>
+		<span property="dc:source"></span>
+		<span property="dc:rightsHolder">Valerio Tramutoli</span>
+		<span property="dc:license">CC BY-SA 4.0</span>
+		
+		<meta property="dc:relation" content="" />	
 		<link rel="stylesheet" href="internal_restricted/v1.0/css/reveal.css">
 		<!-- CHOOSE BETWEEN 2 EO4GEO TEMPLATE THEMES:-->
 		<link rel="stylesheet" href="internal_restricted/v1.0/css/theme/eo4geo.css" id="theme"> <!-- white background design --> 
