--- a/index.html
+++ b/index.html
@@ -36,9 +36,44 @@
 		<span property="dc:educationLevel">EQF 5 to 8</span>
 		<span property="dc:source"></span>
 		<span property="dc:rightsHolder">Valerio Tramutoli</span>
-		<span property="dc:license">CC BY-SA 4.0</span>
+		<span property="dc:license">CC BY-SA 4.0</span>		
 		
-		<meta property="dc:relation" content="" />	
+		<meta property="dc:relation" content="PP1-1" />
+		<meta property="dc:relation" content="PP1-3" />
+		<meta property="dc:relation" content="PP1-3-1" />
+		<meta property="dc:relation" content="PP1-1-4" />
+		<meta property="dc:relation" content="PP1-1-5" />
+		<meta property="dc:relation" content="PP1-2" />
+		<meta property="dc:relation" content="PP1-1-6" />
+		<meta property="dc:relation" content="PP1-3-3" />
+		<meta property="dc:relation" content="PP1-3-4" />
+		<meta property="dc:relation" content="PP1-3-5" />
+		<meta property="dc:relation" content="PP1-3-6" />
+		<meta property="dc:relation" content="IP3-1-2" />
+		<meta property="dc:relation" content="IP3-1-2-3" />
+		<meta property="dc:relation" content="PP1-2-1" />
+		<meta property="dc:relation" content="PP1" />
+		<meta property="dc:relation" content="PP2" />
+		<meta property="dc:relation" content="PS" />
+		<meta property="dc:relation" content="PS3-4" />
+		<meta property="dc:relation" content="GD11-2" />
+		<meta property="dc:relation" content="PP1-1-11" />				
+		<meta property="dc:relation" content="PP1-1-8" />
+		<meta property="dc:relation" content="PP1-1-9" />
+		<meta property="dc:relation" content="PS1" />
+		<meta property="dc:relation" content="PS1-2" />
+		<meta property="dc:relation" content="IP1-7-1-4" />
+		<meta property="dc:relation" content="IP1-7-1-1" />
+		<meta property="dc:relation" content="PP1-6-2" />
+		<meta property="dc:relation" content="PP1-6-3" />
+		<meta property="dc:relation" content="PP1-6-5" />
+		<meta property="dc:relation" content="PP1-7-12" />
+		<meta property="dc:relation" content="PP1-6-7" />
+		<meta property="dc:relation" content="PP1-6-8" />
+		<meta property="dc:relation" content="PP1-2-8" />
+		<meta property="dc:relation" content="IP4-3-1" />
+		<meta property="dc:relation" content="TA14-2-2-1-3" />
+		
 		<link rel="stylesheet" href="internal_restricted/v1.0/css/reveal.css">
 		<!-- CHOOSE BETWEEN 2 EO4GEO TEMPLATE THEMES:-->
 		<link rel="stylesheet" href="internal_restricted/v1.0/css/theme/eo4geo.css" id="theme"> <!-- white background design --> 
@@ -95,9 +130,41 @@
 					dc:source "";
 					dc:rightsHolder "Valerio Tramutoli";
 					dc:license "";
-					dc:relation eo4geo:;
-					dc:relation eo4geo:;
-					dc:relation eo4geo:;.	
+					dc:relation eo4geo:PP1-1;
+					dc:relation eo4geo:PP1-3;
+					dc:relation eo4geo:PP1-3-1;
+					dc:relation eo4geo:PP1-1-4;
+					dc:relation eo4geo:PP1-1-5;
+					dc:relation eo4geo:PP1-2;
+					dc:relation eo4geo:PP1-1-6;
+					dc:relation eo4geo:PP1-3-3;
+					dc:relation eo4geo:PP1-3-4;
+					dc:relation eo4geo:PP1-3-5;
+					dc:relation eo4geo:PP1-3-6;
+					dc:relation eo4geo:IP3-1-2;
+					dc:relation eo4geo:IP3-1-2-3;
+					dc:relation eo4geo:PP1-2-1;
+					dc:relation eo4geo:PP1;
+					dc:relation eo4geo:PP2;
+					dc:relation eo4geo:PS;
+					dc:relation eo4geo:PS3-4;
+					dc:relation eo4geo:GD11-2;
+					dc:relation eo4geo:PP1-1-11;
+					dc:relation eo4geo:PP1-1-8;
+					dc:relation eo4geo:PP1-1-9;
+					dc:relation eo4geo:PS1;
+					dc:relation eo4geo:PS1-2;
+					dc:relation eo4geo:IP1-7-1-4;
+					dc:relation eo4geo:IP1-7-1-1;
+					dc:relation eo4geo:PP1-6-2;
+					dc:relation eo4geo:PP1-6-3;
+					dc:relation eo4geo:PP1-6-5;
+					dc:relation eo4geo:PP1-7-12;
+					dc:relation eo4geo:PP1-6-7;
+					dc:relation eo4geo:PP1-6-8;
+					dc:relation eo4geo:PP1-2-8;
+					dc:relation eo4geo:IP4-3-1;
+					dc:relation eo4geo:TA14-2-2-1-3 .	
 								-->
 
 				<!-- Update Brackets \left(\right) in all equations-->
