--- a/index.html
+++ b/index.html
@@ -118,7 +118,10 @@
 						(13) From ground to space: sensor acquisition and digital image formation, EO sensors; (14) Natural sources of radiation for EO: the Sun and the Earth; (15) Passive and Active Earth Observing Techniques; (16) Interaction between radiation and atmosphere;
 						(17) Chemical-physical properties of atmosphere; (18) Scattering in the atmosphere; (19) Extinction of solar radiation in the atmosphere; (20) Atmospheric transmittance and atmospheric windows;
 						(21) Penetration of e.m. radiation into the matter; (22) A Remote Sensing application: sediments or shallow water?; 23() Cloud detection ;";
-					dc:description "Understand Physical Principles which are the basis of Remote Sensing;";
+					dc:description "Learning outcomes: Understand Physical Principles which are the basis of Remote Sensing; Understand basis of EM energy and its propagation through the space; Illustrate basic modern physics theory understanding their implications on the development of advanced sensors for EO;
+									   Illustrate basic radiation-matter interactions and related concepts of spectral reflectance, absorbance and transmittance as specific properties of the matter; Explain the concept of composition of spectral signatures and apply the 'linear mixing' models in some simple case; Illustrate the concept of spectral signatures of the matter;
+									   Illustrate the spectral response curves for basic environmental features (e.g., vegetation, concrete, bare soil); Illustrate e.m. radiation intercations with/within clouds; Illustrate main spectral signatures of clouds and apply them in paractical cloud-detection exercise;
+									   ";
 					dc:contributor "Nicola Capece, Valeria Satriano";
 					dc:created "2020-08-27";
 					dc:type "InteractiveResource";
