--- a/index.html
+++ b/index.html
@@ -25,7 +25,19 @@
 													(13) From ground to space: sensor acquisition and digital image formation, EO sensors; (14) Natural sources of radiation for EO: the Sun and the Earth; (15) Passive and Active Earth Observing Techniques; (16) Interaction between radiation and atmosphere;
 													(17) Chemical-physical properties of atmosphere; (18) Scattering in the atmosphere; (19) Extinction of solar radiation in the atmosphere; (20) Atmospheric transmittance and atmospheric windows;
 													(21) Penetration of e.m. radiation into the matter; (22) A Remote Sensing application: sediments or shallow water?; 23() Cloud detection</span>
-		<span property="dc:desription">Understand Physical Principles which are the basis of Remote Sensing</span>
+		<span property="dc:desription">Understand Physical Principles which are the basis of Remote Sensing; Understand basis of EM energy and its propagation through the space; Illustrate basic modern physics theory understanding their implications on the development of advanced sensors for EO;
+					       Illustrate basic radiation-matter interactions and related concepts of spectral reflectance, absorbance and transmittance as specific properties of the matter; Explain the concept of composition of spectral signatures and apply the 'linear mixing' models in some simple case; Illustrate the concept of spectral signatures of the matter;
+					       Illustrate the spectral response curves for basic environmental features (e.g., vegetation, concrete, bare soil);Illustrate basic features of spectral signatures of vegetation, water and bare soil; Illustrate e.m. radiation intercations with/within clouds; 
+					       Illustrate main spectral signatures of clouds and apply them in paractical cloud-detection exercise; Explain an application example where the spectral indices are used for vegetation, water or snow monitoring; Examine how the vegetation indices relates to the vegetation dynamics and health;
+					       Examine how the water-related spectral indices relates to changes in the vegetation and soil water content; Explain how the NDVI relates to vegetation activity/health; Explain sensitivity of NDVI to the chlorophyll content of vegetation;
+					       Knowledge of the basic (selective) mechanism of the absorption/emission of electromagnetic radiation by atoms; Demonstrate the relationships among measured multi-spectral radiation and specific chemical (e.g. composition) and physical (e.g. temperature, pressure, etc.) properties of the observed matter; Explain what microwave remote sensing is; 
+					       Explain differences between optical and radar remote sensing; Explain how radar images are used for specific applications; Discuss the main types of remote sensing sensors and platforms;
+					       Discuss the main types of remote sensing data; Distinguish and explain the different types of properties of digital imagery; Explain and discuss what the spectral resolution is;
+					       Explain and discuss what the spatial resolution is; Explain and discuss what the radiometric resolution is; Explain and discuss what the temporal resolution is;
+					       Compare common sensors by spatial resolution, spectral sensitivity, ground coverage, and temporal resolution [e.g., AVHRR, MODIS (intermediate resolution ~500 m, high temporal) Landsat, commercial high resolution (Ikonos and Quickbird); Demonstrate basic knowledge of the interaction between the solar radiation and atmospheric constituents; Discuss types and classes of remote sensing sensors;
+					       Select the type of remote sensing sensor appropriate for your application; Explain and discuss types of sensing mechanisms; Discuss advantages and disadvantages of passive and active sensors;
+					       Understand sun, sun angle, and sensor parameters that influence top of atmosphere (TOA) reflectance; Understand atmospheric parameters that influence bottom of atmosphere (BOA) reflectance; Discuss the basic principles of solar radiation;
+					       Demonstrate basic knowledge of the atmospheric absorption and scattering mechanisms; Illustrate the interaction of e.m. radiation in the thermal infrared with the atmosphere understanding specifc characteristics of radiative transfer in this specific spectral region;";</span>
 		<span property="dc:contributor">Nicola Capece, Valeria Satriano</span>
 		<span property="dc:created">2020-08-27</span>
 		<span property="dc:type">InteractiveResource</span>
@@ -73,7 +85,6 @@
 		<meta property="dc:relation" content="PP1-2-8" />
 		<meta property="dc:relation" content="IP4-3-1" />
 		<meta property="dc:relation" content="TA14-2-2-1-3" />
-		
 		<link rel="stylesheet" href="internal_restricted/v1.0/css/reveal.css">
 		<!-- CHOOSE BETWEEN 2 EO4GEO TEMPLATE THEMES:-->
 		<link rel="stylesheet" href="internal_restricted/v1.0/css/theme/eo4geo.css" id="theme"> <!-- white background design --> 
@@ -120,8 +131,17 @@
 						(21) Penetration of e.m. radiation into the matter; (22) A Remote Sensing application: sediments or shallow water?; 23() Cloud detection ;";
 					dc:description "Learning outcomes: Understand Physical Principles which are the basis of Remote Sensing; Understand basis of EM energy and its propagation through the space; Illustrate basic modern physics theory understanding their implications on the development of advanced sensors for EO;
 									   Illustrate basic radiation-matter interactions and related concepts of spectral reflectance, absorbance and transmittance as specific properties of the matter; Explain the concept of composition of spectral signatures and apply the 'linear mixing' models in some simple case; Illustrate the concept of spectral signatures of the matter;
-									   Illustrate the spectral response curves for basic environmental features (e.g., vegetation, concrete, bare soil); Illustrate e.m. radiation intercations with/within clouds; Illustrate main spectral signatures of clouds and apply them in paractical cloud-detection exercise;
-									   ";
+									   Illustrate the spectral response curves for basic environmental features (e.g., vegetation, concrete, bare soil);Illustrate basic features of spectral signatures of vegetation, water and bare soil; Illustrate e.m. radiation intercations with/within clouds; 
+									   Illustrate main spectral signatures of clouds and apply them in paractical cloud-detection exercise; Explain an application example where the spectral indices are used for vegetation, water or snow monitoring; Examine how the vegetation indices relates to the vegetation dynamics and health;
+									   Examine how the water-related spectral indices relates to changes in the vegetation and soil water content; Explain how the NDVI relates to vegetation activity/health; Explain sensitivity of NDVI to the chlorophyll content of vegetation;
+									   Knowledge of the basic (selective) mechanism of the absorption/emission of electromagnetic radiation by atoms; Demonstrate the relationships among measured multi-spectral radiation and specific chemical (e.g. composition) and physical (e.g. temperature, pressure, etc.) properties of the observed matter; Explain what microwave remote sensing is; 
+									   Explain differences between optical and radar remote sensing; Explain how radar images are used for specific applications; Discuss the main types of remote sensing sensors and platforms;
+									   Discuss the main types of remote sensing data; Distinguish and explain the different types of properties of digital imagery; Explain and discuss what the spectral resolution is;
+									   Explain and discuss what the spatial resolution is; Explain and discuss what the radiometric resolution is; Explain and discuss what the temporal resolution is;
+									   Compare common sensors by spatial resolution, spectral sensitivity, ground coverage, and temporal resolution [e.g., AVHRR, MODIS (intermediate resolution ~500 m, high temporal) Landsat, commercial high resolution (Ikonos and Quickbird); Demonstrate basic knowledge of the interaction between the solar radiation and atmospheric constituents; Discuss types and classes of remote sensing sensors;
+									   Select the type of remote sensing sensor appropriate for your application; Explain and discuss types of sensing mechanisms; Discuss advantages and disadvantages of passive and active sensors;
+									   Understand sun, sun angle, and sensor parameters that influence top of atmosphere (TOA) reflectance; Understand atmospheric parameters that influence bottom of atmosphere (BOA) reflectance; Discuss the basic principles of solar radiation;
+									   Demonstrate basic knowledge of the atmospheric absorption and scattering mechanisms; Illustrate the interaction of e.m. radiation in the thermal infrared with the atmosphere understanding specifc characteristics of radiative transfer in this specific spectral region;";
 					dc:contributor "Nicola Capece, Valeria Satriano";
 					dc:created "2020-08-27";
 					dc:type "InteractiveResource";
