--- a/index.html
+++ b/index.html
@@ -15,17 +15,18 @@
 		<meta charset="utf-8">
 		 
 		<title> </title>
-		<span property="dc:title">Fundamentals of optical remote sensing</span>
-		<span property="dc:creator">Valerio Tramutoli, University of Basilicata</span>
-		<span property="dc:subject">Physical Priciples, Remote Sensing, EO4GEO, Satellite, Earth Observation</span>
-		<span property="dc:abstract">This is a module on Physical Principles which are the basis of any Remote Sensing application";</span>
-		<span property="dc:tableOfContents">(1) em radiation and radiometric measurements; (2) Blackbody Radiation; (3) Rayleigh-Jeans approssimation ; (4) Wien's Law; 
+		<meta property="dc:title" content="Fundamentals of optical remote sensing" /> 
+		<meta property="dc:creator" content="Valerio Tramutoli" /> 
+		<meta property="dc:publisher" content="University of Basilicata" /> 
+		<meta property="dc:subject" content="Physical Priciples, Remote Sensing, EO4GEO, Satellite, Earth Observation"/> 
+		<meta property="dc:abstract" content="This is a module on Physical Principles which are the basis of any Remote Sensing application" /> 
+		<meta property="dc:tableOfContents" content="(1) em radiation and radiometric measurements; (2) Blackbody Radiation; (3) Rayleigh-Jeans approssimation ; (4) Wien's Law; 
 													(5) Matter/Radiation interaction; (6) Kirchoff Law; (7) Matter/Radiation interaction in the visible range; (8) Spectral measurements, spectral signatures of soil, water, vegetation;
 													(9) Interpretation of vegetations spectral signatures; (10) NDVI index; (11) Atomic Spectroscopy; (12) Basic principles of multi-spectral remote sensing;
 													(13) From ground to space: sensor acquisition and digital image formation, EO sensors; (14) Natural sources of radiation for EO: the Sun and the Earth; (15) Passive and Active Earth Observing Techniques; (16) Interaction between radiation and atmosphere;
 													(17) Chemical-physical properties of atmosphere; (18) Scattering in the atmosphere; (19) Extinction of solar radiation in the atmosphere; (20) Atmospheric transmittance and atmospheric windows;
-													(21) Penetration of e.m. radiation into the matter; (22) A Remote Sensing application: sediments or shallow water?; 23() Cloud detection</span>
-		<span property="dc:desription">Learning outcomes: Understand Physical Principles which are the basis of Remote Sensing; Understand basis of EM energy and its propagation through the space; Illustrate basic modern physics theory understanding their implications on the development of advanced sensors for EO;
+													(21) Penetration of e.m. radiation into the matter; (22) A Remote Sensing application: sediments or shallow water?; 23() Cloud detection" /> 
+		<meta property="dc:desription" content="Learning outcomes: Understand Physical Principles which are the basis of Remote Sensing; Understand basis of EM energy and its propagation through the space; Illustrate basic modern physics theory understanding their implications on the development of advanced sensors for EO;
 					       Illustrate basic radiation-matter interactions and related concepts of spectral reflectance, absorbance and transmittance as specific properties of the matter; Explain the concept of composition of spectral signatures and apply the 'linear mixing' models in some simple case; Illustrate the concept of spectral signatures of the matter;
 					       Illustrate the spectral response curves for basic environmental features (e.g., vegetation, concrete, bare soil);Illustrate basic features of spectral signatures of vegetation, water and bare soil; Illustrate e.m. radiation intercations with/within clouds; 
 					       Illustrate main spectral signatures of clouds and apply them in paractical cloud-detection exercise; Explain an application example where the spectral indices are used for vegetation, water or snow monitoring; Examine how the vegetation indices relates to the vegetation dynamics and health;
@@ -37,54 +38,55 @@
 					       Compare common sensors by spatial resolution, spectral sensitivity, ground coverage, and temporal resolution [e.g., AVHRR, MODIS (intermediate resolution ~500 m, high temporal) Landsat, commercial high resolution (Ikonos and Quickbird); Demonstrate basic knowledge of the interaction between the solar radiation and atmospheric constituents; Discuss types and classes of remote sensing sensors;
 					       Select the type of remote sensing sensor appropriate for your application; Explain and discuss types of sensing mechanisms; Discuss advantages and disadvantages of passive and active sensors;
 					       Understand sun, sun angle, and sensor parameters that influence top of atmosphere (TOA) reflectance; Understand atmospheric parameters that influence bottom of atmosphere (BOA) reflectance; Discuss the basic principles of solar radiation;
-					       Demonstrate basic knowledge of the atmospheric absorption and scattering mechanisms; Illustrate the interaction of e.m. radiation in the thermal infrared with the atmosphere understanding specifc characteristics of radiative transfer in this specific spectral region;";</span>
-		<span property="dc:contributor">Nicola Capece, Valeria Satriano</span>
-		<span property="dc:created">2020-08-27</span>
-		<span property="dc:type">InteractiveResource</span>
-		<span property="dc:format">html</span>
-		<span property="dc:language">EN</span>
-		<span property="dc:SizeOrDuration">270min + tutorials</span>
-		<span property="dc:audience">from VET up to doctoral students</span>
-		<span property="dc:educationLevel">EQF 5 to 8</span>
-		<span property="dc:source"></span>
-		<span property="dc:rightsHolder">Valerio Tramutoli</span>
-		<span property="dc:license">CC BY-SA 4.0</span>		
+					       Demonstrate basic knowledge of the atmospheric absorption and scattering mechanisms; Illustrate the interaction of e.m. radiation in the thermal infrared with the atmosphere understanding specifc characteristics of radiative transfer in this specific spectral region;" /> 
+		<meta property="dc:contributor" content="Nicola Capece, Valeria Satriano" /> 
+		<meta property="dc:created" content="2020-08-27" /> 
+		<meta property="dc:type" content="teaching material" /> 
+		<meta property="dc:format" content="html" /> 
+		<meta property="dc:language" content="EN" /> 
+		<meta property="dc:SizeOrDuration" content="270min + tutorials" /> 
+		<meta property="dc:audience" content="from VET up to doctoral students" /> 
+		<meta property="dc:educationLevel" content="EQF 5 to 8" /> 
+		<meta property="dc:source" content="" /> 
+		<meta property="dc:rightsHolder" content="Valerio Tramutoli" /> 
+		<meta property="dc:license" content="https://creativecommons.org/licenses/by-sa/4.0/deed.en" /> 		
 		
-		<meta property="dc:relation" content="PP1-1" />
-		<meta property="dc:relation" content="PP1-3" />
-		<meta property="dc:relation" content="PP1-3-1" />
-		<meta property="dc:relation" content="PP1-1-4" />
-		<meta property="dc:relation" content="PP1-1-5" />
-		<meta property="dc:relation" content="PP1-2" />
-		<meta property="dc:relation" content="PP1-1-6" />
-		<meta property="dc:relation" content="PP1-3-3" />
-		<meta property="dc:relation" content="PP1-3-4" />
-		<meta property="dc:relation" content="PP1-3-5" />
-		<meta property="dc:relation" content="PP1-3-6" />
-		<meta property="dc:relation" content="IP3-1-2" />
-		<meta property="dc:relation" content="IP3-1-2-3" />
-		<meta property="dc:relation" content="PP1-2-1" />
-		<meta property="dc:relation" content="PP1" />
-		<meta property="dc:relation" content="PP2" />
-		<meta property="dc:relation" content="PS" />
-		<meta property="dc:relation" content="PS3-4" />
-		<meta property="dc:relation" content="GD11-2" />
-		<meta property="dc:relation" content="PP1-1-11" />				
-		<meta property="dc:relation" content="PP1-1-8" />
-		<meta property="dc:relation" content="PP1-1-9" />
-		<meta property="dc:relation" content="PS1" />
-		<meta property="dc:relation" content="PS1-2" />
-		<meta property="dc:relation" content="IP1-7-1-4" />
-		<meta property="dc:relation" content="IP1-7-1-1" />
-		<meta property="dc:relation" content="PP1-6-2" />
-		<meta property="dc:relation" content="PP1-6-3" />
-		<meta property="dc:relation" content="PP1-6-5" />
-		<meta property="dc:relation" content="PP1-7-12" />
-		<meta property="dc:relation" content="PP1-6-7" />
-		<meta property="dc:relation" content="PP1-6-8" />
-		<meta property="dc:relation" content="PP1-2-8" />
-		<meta property="dc:relation" content="IP4-3-1" />
-		<meta property="dc:relation" content="TA14-2-2-1-3" />
+		<link rel="dc:relation" href="PP1-1" />
+		<link rel="dc:relation" href="PP1-3" />
+		<link rel="dc:relation" href="PP1-3-1" />
+		<link rel="dc:relation" href="PP1-1-4" />
+		<link rel="dc:relation" href="PP1-1-5" />
+		<link rel="dc:relation" href="PP1-2" />
+		<link rel="dc:relation" href="PP1-1-6" />
+		<link rel="dc:relation" href="PP1-3-3" />
+		<link rel="dc:relation" href="PP1-3-4" />
+		<link rel="dc:relation" href="PP1-3-5" />
+		<link rel="dc:relation" href="PP1-3-6" />
+		<link rel="dc:relation" href="IP3-1-2" />
+		<link rel="dc:relation" href="IP3-1-2-3" />
+		<link rel="dc:relation" href="PP1-2-1" />
+		<link rel="dc:relation" href="PP1" />
+		<link rel="dc:relation" href="PP2" />
+		<link rel="dc:relation" href="PS" />
+		<link rel="dc:relation" href="PS3-4" />
+		<link rel="dc:relation" href="GD11-2" />
+		<link rel="dc:relation" href="PP1-1-11" />				
+		<link rel="dc:relation" href="PP1-1-8" />
+		<link rel="dc:relation" href="PP1-1-9" />
+		<link rel="dc:relation" href="PS1" />
+		<link rel="dc:relation" href="PS1-2" />
+		<link rel="dc:relation" href="IP1-7-1-4" />
+		<link rel="dc:relation" href="IP1-7-1-1" />
+		<link rel="dc:relation" href="PP1-6-2" />
+		<link rel="dc:relation" href="PP1-6-3" />
+		<link rel="dc:relation" href="PP1-6-5" />
+		<link rel="dc:relation" href="PP1-7-12" />
+		<link rel="dc:relation" href="PP1-6-7" />
+		<link rel="dc:relation" href="PP1-6-8" />
+		<link rel="dc:relation" href="PP1-2-8" />
+		<link rel="dc:relation" href="IP4-3-1" />
+		<link rel="dc:relation" href="TA14-2-2-1-3" />
+
 		<link rel="stylesheet" href="internal_restricted/v1.0/css/reveal.css">
 		<!-- CHOOSE BETWEEN 2 EO4GEO TEMPLATE THEMES:-->
 		<link rel="stylesheet" href="internal_restricted/v1.0/css/theme/eo4geo.css" id="theme"> <!-- white background design --> 
