--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<head>
 		<meta charset="utf-8">
 		 
-		<title> </title>
-		<meta property="dc:title" content="Fundamentals of optical remote sensing" /> 
+		<title>Fundaments of optical remote sensing</title>
+		<meta property="dc:title" content="Fundaments of optical remote sensing" /> 
 		<meta property="dc:creator" content="Valerio Tramutoli" /> 
 		<meta property="dc:publisher" content="University of Basilicata" /> 
 		<meta property="dc:subject" content="Physical Priciples, Remote Sensing, EO4GEO, Satellite, Earth Observation"/> 
@@ -115,7 +115,7 @@
 				 <div class = "eo4geologo" style="width: 11%;height : 11%" ></div>	
 			
 				 <div class = "partnerlogo" style="width: 10%;height : 20%" ></div>		
-				 <div  class = "presentation_title" style=" text-align: center " >Foundamental of Optical Remote Sensing</div>	<!--The title of the presentation appears on each slide-->
+				 <div  class = "presentation_title" style=" text-align: center " >Fundaments of Optical Remote Sensing</div>	<!--The title of the presentation appears on each slide-->
 				 
 
 			<!-- AUTHORS: DEFINE METADATA FOR WHOLE SLIDESET HERE: (Dublin Core Metadata format, complemented by BoK-Concepts) >
