--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
 			<!-- AUTHORS: DEFINE METADATA FOR WHOLE SLIDESET HERE: (Dublin Core Metadata format, complemented by BoK-Concepts) >
 				@prefix dc: <http://purl.org/dc/terms/>.
 				@prefix eo4geo: <http://bok.eo4geo.eu/>.
-				<>  	dc:title "Foundamental of optical remote sensing";
+				<>  	dc:title "Fundaments of optical remote sensing";
 					dc:creator "Valerio Tramutoli, University of Basilicata";
 					dc:subject "Physical Priciples, Remote Sensing, EO4GEO, Satellite, Earth Observation";
 					dc:abstract "This is a module on Physical Principles which are the basis of any Remote Sensing application";
