--- a/index.html
+++ b/index.html
@@ -217,7 +217,7 @@
 				<section > <!-- Slide 0-->
 					<h2 style="color:#2D5595;">Introductory Course</h2>
 					<br/><br/>
-					<h1 style="display:inline; color:#FF6600;">Foundaments of Optical Remote Sensing</h1>
+					<h1 style="display:inline; color:#FF6600;">Fundaments of Optical Remote Sensing</h1>
 					
 					<br>
 
