--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 				<>  	dc:title "Fundaments of optical remote sensing";
 					dc:creator "Valerio Tramutoli, University of Basilicata";
 					dc:subject "Physical Priciples, Remote Sensing, EO4GEO, Satellite, Earth Observation";
-					dc:abstract "This is a module on Physical Principles which are the basis of any Remote Sensing application";
+					dc:abstract "This course contains the basic elements of Earth observation from space, dealing with the basic physical principles, technologies and methodologies used. The main objective of the course is to provide students with the foundations for studying the processes and environmental parameters with space technologies.";
 					dc:tableOfContents "(1) em radiation and radiometric measurements; (2) Blackbody Radiation; (3) Rayleigh-Jeans approssimation ; (4) Wien's Law; 
 						(5) Matter/Radiation interaction; (6) Kirchoff Law; (7) Matter/Radiation interaction in the visible range; (8) Spectral measurements, spectral signatures of soil, water, vegetation;
 						(9) Interpretation of vegetations spectral signatures; (10) NDVI index; (11) Atomic Spectroscopy; (12) Basic principles of multi-spectral remote sensing;
