--- a/index.html
+++ b/index.html
@@ -51,41 +51,41 @@
 		<meta property="dc:rightsHolder" content="Valerio Tramutoli" /> 
 		<meta property="dc:license" content="https://creativecommons.org/licenses/by-sa/4.0/deed.en" /> 		
 		
-		<link rel="dc:relation" href="PP1-1" />
-		<link rel="dc:relation" href="PP1-3" />
-		<link rel="dc:relation" href="PP1-3-1" />
-		<link rel="dc:relation" href="PP1-1-4" />
-		<link rel="dc:relation" href="PP1-1-5" />
-		<link rel="dc:relation" href="PP1-2" />
-		<link rel="dc:relation" href="PP1-1-6" />
-		<link rel="dc:relation" href="PP1-3-3" />
-		<link rel="dc:relation" href="PP1-3-4" />
-		<link rel="dc:relation" href="PP1-3-5" />
-		<link rel="dc:relation" href="PP1-3-6" />
-		<link rel="dc:relation" href="IP3-1-2" />
-		<link rel="dc:relation" href="IP3-1-2-3" />
-		<link rel="dc:relation" href="PP1-2-1" />
-		<link rel="dc:relation" href="PP1" />
-		<link rel="dc:relation" href="PP2" />
-		<link rel="dc:relation" href="PS" />
-		<link rel="dc:relation" href="PS3-4" />
-		<link rel="dc:relation" href="GD11-2" />
-		<link rel="dc:relation" href="PP1-1-11" />				
-		<link rel="dc:relation" href="PP1-1-8" />
-		<link rel="dc:relation" href="PP1-1-9" />
-		<link rel="dc:relation" href="PS1" />
-		<link rel="dc:relation" href="PS1-2" />
-		<link rel="dc:relation" href="IP1-7-1-4" />
-		<link rel="dc:relation" href="IP1-7-1-1" />
-		<link rel="dc:relation" href="PP1-6-2" />
-		<link rel="dc:relation" href="PP1-6-3" />
-		<link rel="dc:relation" href="PP1-6-5" />
-		<link rel="dc:relation" href="PP1-7-12" />
-		<link rel="dc:relation" href="PP1-6-7" />
-		<link rel="dc:relation" href="PP1-6-8" />
-		<link rel="dc:relation" href="PP1-2-8" />
-		<link rel="dc:relation" href="IP4-3-1" />
-		<link rel="dc:relation" href="TA14-2-2-1-3" />
+		<link rel="dc:relation" href="eo4geo:PP1-1" />
+		<link rel="dc:relation" href="eo4geo:PP1-3" />
+		<link rel="dc:relation" href="eo4geo:PP1-3-1" />
+		<link rel="dc:relation" href="eo4geo:PP1-1-4" />
+		<link rel="dc:relation" href="eo4geo:PP1-1-5" />
+		<link rel="dc:relation" href="eo4geo:PP1-2" />
+		<link rel="dc:relation" href="eo4geo:PP1-1-6" />
+		<link rel="dc:relation" href="eo4geo:PP1-3-3" />
+		<link rel="dc:relation" href="eo4geo:PP1-3-4" />
+		<link rel="dc:relation" href="eo4geo:PP1-3-5" />
+		<link rel="dc:relation" href="eo4geo:PP1-3-6" />
+		<link rel="dc:relation" href="eo4geo:IP3-1-2" />
+		<link rel="dc:relation" href="eo4geo:IP3-1-2-3" />
+		<link rel="dc:relation" href="eo4geo:PP1-2-1" />
+		<link rel="dc:relation" href="eo4geo:PP1" />
+		<link rel="dc:relation" href="eo4geo:PP2" />
+		<link rel="dc:relation" href="eo4geo:PS" />
+		<link rel="dc:relation" href="eo4geo:PS3-4" />
+		<link rel="dc:relation" href="eo4geo:GD11-2" />
+		<link rel="dc:relation" href="eo4geo:PP1-1-11" />				
+		<link rel="dc:relation" href="eo4geo:PP1-1-8" />
+		<link rel="dc:relation" href="eo4geo:PP1-1-9" />
+		<link rel="dc:relation" href="eo4geo:PS1" />
+		<link rel="dc:relation" href="eo4geo:PS1-2" />
+		<link rel="dc:relation" href="eo4geo:IP1-7-1-4" />
+		<link rel="dc:relation" href="eo4geo:IP1-7-1-1" />
+		<link rel="dc:relation" href="eo4geo:PP1-6-2" />
+		<link rel="dc:relation" href="eo4geo:PP1-6-3" />
+		<link rel="dc:relation" href="eo4geo:PP1-6-5" />
+		<link rel="dc:relation" href="eo4geo:PP1-7-12" />
+		<link rel="dc:relation" href="eo4geo:PP1-6-7" />
+		<link rel="dc:relation" href="eo4geo:PP1-6-8" />
+		<link rel="dc:relation" href="eo4geo:PP1-2-8" />
+		<link rel="dc:relation" href="eo4geo:IP4-3-1" />
+		<link rel="dc:relation" href="eo4geo:TA14-2-2-1-3" />
 
 		<link rel="stylesheet" href="internal_restricted/v1.0/css/reveal.css">
 		<!-- CHOOSE BETWEEN 2 EO4GEO TEMPLATE THEMES:-->
