--- a/index.html
+++ b/index.html
@@ -382,11 +382,11 @@
 							<td>
 								<span>Ex: Sun Exitance for a Sun radius \(R = 7 \times 10^8m\)</span>
 								<br/><br/>
-								<span>\(3.90 \times 10^{26}\)</span>
-								<br/><br/>
-								<span>\(F(Sun) = \)_______________\( = 6.34 \times 10^7 W m^{-2}\)</span>
-								<br/><br/>
-								<span>\(4\pi (7 \times 10^8)^2\)</span>
+								<!--<span>\(3.90 \times 10^{26}\)</span>
+								<br/><br/>-->
+								<span>\(F(Sun) = \)\frac{\(3.90 \times 10^{26}\)}{\(4\pi (7 \times 10^8)^2\)}\( = 6.34 \times 10^7 W m^{-2}\)</span>
+								<!--<br/><br/>
+								<span>\(4\pi (7 \times 10^8)^2\)</span>-->
 							</td>
 						</tr>
 						<tr>
