--- a/index.html
+++ b/index.html
@@ -1101,7 +1101,7 @@
 					<section> <!--Revision 3-->
 						<br/>
 						<h3 style="color:#2D5595; font-weight:bold; float:center;">Example of NDVI reduction after fires</h3>
-						<img class="myimage" width="90%" data-src="resources\images\tutorial_NDVI_1.png">
+						<img class="myimage" width="90%" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/tutorial_NDVI_1.png">
 						<h5 style="font-weight:bold; float:center; margin-top:-42%;">High <br/> NDVI</h5>
 						<h5 style="font-weight:bold; float:center; margin-top:13%;">Mid</h5>
 						<h5 style="font-weight:bold; float:center; margin-top:15%;">Low</h5>
@@ -1149,21 +1149,21 @@
 						<br/><br/>
 						<div style="margin-left:-10%;">
 							<div>
-								<img class="myimage" width="18%" style="margin-left:-80%;" data-src="resources\images\tutorial_NDVI_2.png">
+								<img class="myimage" width="18%" style="margin-left:-80%;" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/tutorial_NDVI_2.png">
 								<span style="font-size:60%; font-weight:bold; position:absolute; margin-left:-2%; margin-top:1.4%;">1</span>
-								<img class="myimage" width="18%" style="margin-left:-17%; margin-bottom:-0.25%;" data-src="resources\images\tutorial_NDVI_2.png">
+								<img class="myimage" width="18%" style="margin-left:-17%; margin-bottom:-0.25%;" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/tutorial_NDVI_2.png">
 								<span style="font-size:60%; font-weight:bold; position:absolute; margin-left:-2%; margin-top:3.4%;">2</span>
-								<img class="myimage" width="18%" style="margin-left:-17%; margin-bottom:-2.15%;" data-src="resources\images\tutorial_NDVI_2.png">
+								<img class="myimage" width="18%" style="margin-left:-17%; margin-bottom:-2.15%;" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/tutorial_NDVI_2.png">
 								<span style="font-size:60%; font-weight:bold; position:absolute; margin-left:-2%; margin-top:5.4%;">3</span>
-								<img class="myimage" width="18%" style="margin-left:-17%; margin-bottom:-4.0%;" data-src="resources\images\tutorial_NDVI_2.png">
+								<img class="myimage" width="18%" style="margin-left:-17%; margin-bottom:-4.0%;" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/tutorial_NDVI_2.png">
 								<span style="font-size:60%; font-weight:bold; position:absolute; margin-left:-2%; margin-top:7.4%;">4</span>
-								<img class="myimage" width="18%" style="margin-left:-17%; margin-bottom:-5.8%;" data-src="resources\images\tutorial_NDVI_2.png">
+								<img class="myimage" width="18%" style="margin-left:-17%; margin-bottom:-5.8%;" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/tutorial_NDVI_2.png">
 								<span style="font-size:60%; font-weight:bold; position:absolute; margin-left:-1.5%; margin-top:9.4%;">5</span>
 							</div>
 							<div style="margin-top:-12.85%; margin-left:60%;">
 								<table width="100%">
 									<tr>
-										<td><img class="myimage" width="63%" class="myimage" data-src="resources\images\down-arrow.png" style="transform: rotate(-90deg);"></td>
+										<td><img class="myimage" width="63%" class="myimage" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/down-arrow.png" style="transform: rotate(-90deg);"></td>
 										<td><img class="myimage" width="63%" data-src="resources\images\tutorial_NDVI_2.png"></td>
 									</tr>
 								</table>
@@ -1173,13 +1173,13 @@
 					</section>
 					<section> <!--Revision 5-->
 						<h2 style="color:#2D5595; font-weight:bold; float:center;">SEASONAL CHANGE AT REGIONAL SCALE</h2>
-						<img class="myimage" width="40%" data-src="resources\images\tutorial_NDVI_3.png">
-						<img class="myimage" width="39.6%" data-src="resources\images\tutorial_NDVI_3a.png">
+						<img class="myimage" width="40%" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/tutorial_NDVI_3.png">
+						<img class="myimage" width="39.6%" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/tutorial_NDVI_3a.png">
 						<br/>
 						<span style="font-size:85%; border-style:solid; border-color:black; border-width:thin; font-weight:bold; float:left; margin-left:17.5%;">&nbsp JUNE &nbsp </span>
 						<span style="font-size:85%; border-style:solid; border-width:thin; border-color:black; font-weight:bold; float:right; margin-right:20%;">&nbsp NOVEMBER &nbsp </span>
 						<br/>
-						<img class="myimage" style="margin-right:-1.5%; width:750px; height:30px; margin-top:-0.27%;" data-src="resources\images\tutorial_NDVI_4.png">
+						<img class="myimage" style="margin-right:-1.5%; width:750px; height:30px; margin-top:-0.27%;" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/tutorial_NDVI_4.png">
 						<br>
 						<div style="margin-top:-2%;">
 							<span style="font-size:50%; font-weight:bold; float:left; margin-left:15.5%;">CLOUDS 0.0</span>
@@ -1201,7 +1201,7 @@
 						<h3 style="color:#2D5595; font-weight:bold; float:center;">MONITORING OF DEFORESTATION</h3>
 						<div style="display:inline-block;">
 							<span style="font-size:30px; font-weight:bold; float:left; margin-left:-15%; margin-top:25%;">\(\bbox[15px, yellow]{NDVI = \frac{R_{NIR}-R_{VIS}}{R_{NIR} + R_{VIS}}}\)</span>
-							<img class="myimage" style="float:right; margin-right:-20%;" width="75%" data-src="resources\images\tutorial_NDVI_5.png">
+							<img class="myimage" style="float:right; margin-right:-20%;" width="75%" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/tutorial_NDVI_5.png">
 						</div>
 					</section>
 					<section> <!--Revision 7-->
@@ -1209,7 +1209,7 @@
 						<h3 style="color:#2D5595; font-weight:bold; float:center;">Vegetation (Normalized Difference Vegetation Index)</h3>
 						<h3 style="color:#2D5595; font-weight:bold; float:center;">MONITORING OF DESERTIFICATION</h3>
 						<div style="display:inline-block;">
-							<img class="myimage" style="float:left; margin-left:-7.5%; margin-top:-2.0%;" width="73%" data-src="resources\images\tutorial_NDVI_6.png">
+							<img class="myimage" style="float:left; margin-left:-7.5%; margin-top:-2.0%;" width="73%" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/tutorial_NDVI_6.png">
 							<span style="float:right; text-align:left; margin-right:-5%; margin-top:27.5%;">From the analysis <br/> of long (ten-year) time <br/> series of NDVI </span>
 						</div>
 					</section>
@@ -1226,7 +1226,7 @@
 								<br/>
 								<span style="font-size:26px; font-weight:bold; float:left;">\(\bbox[15px, yellow]{NDVI = \frac{R_{NIR}-R_{VIS}}{R_{NIR} + R_{VIS}}}\)</span>
 							</div>
-							<img class="myimage" style="float:right; margin-right:-20%;" width="85%" data-src="resources\images\tutorial_NDVI_7.png">
+							<img class="myimage" style="float:right; margin-right:-20%;" width="85%" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/tutorial_NDVI_7.png">
 						</div>
 					</section>
 				</section>
