--- a/index.html
+++ b/index.html
@@ -1164,7 +1164,7 @@
 								<table width="100%">
 									<tr>
 										<td><img class="myimage" width="63%" class="myimage" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/down-arrow.png" style="transform: rotate(-90deg);"></td>
-										<td><img class="myimage" width="63%" data-src="resources\images\tutorial_NDVI_2.png"></td>
+										<td><img class="myimage" width="63%" data-src="http://eo4geo.sbg.ac.at/UNIBAS/UNIBAS_Remote-Sensing-Environment/tutorial_NDVI_2.png"></td>
 									</tr>
 								</table>
 								<span style="font-size:60%; font-weight:bold; position:absolute; margin-left:-1.6%; margin-top:-20.5%;">MAX (1,2,3,4,5)</span>
