--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
 	<head>
 		<meta charset="utf-8">
 		 
-		<title>Fundaments of optical remote sensing</title>
-		<meta property="dc:title" content="Fundaments of optical remote sensing" /> 
+		<title>Introduction to Satellite Remote Sensing</title>
+		<meta property="dc:title" content="Introduction to Satellite Remote Sensing" /> 
 		<meta property="dc:creator" content="Valerio Tramutoli" /> 
 		<meta property="dc:publisher" content="University of Basilicata" /> 
 		<meta property="dc:subject" content="Physical Priciples, Remote Sensing, EO4GEO, Satellite, Earth Observation"/> 
